// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toCommitInOrder fails when the action commits mutations 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toCommitInOrder()[22m

Expected to not have been commited:
 [32m[\\"1\\", \\"2\\", \\"3\\"][39m
Received:
 [31m[\\"1\\", \\"2\\", \\"3\\"][39m"
`;

exports[`.not.toCommitInOrder fails when the action commits mutations not strictly 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toCommitInOrder()[22m

Expected to not have been commited:
 [32m[\\"1\\", \\"3\\"][39m
Received:
 [31m[\\"1\\", \\"2\\", \\"3\\"][39m"
`;

exports[`.toCommitInOrder fails when the action does not commits mutations 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toCommitInOrder()[22m

Expected to have been commit:
 [32m[\\"1\\", \\"2\\"][39m
Received:
 [31m[\\"1\\", \\"2\\", \\"3\\"][39m"
`;
